--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PlayLoop</title>
     <link rel="stylesheet" href="./src/index.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Shade&family=VT323&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
