--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>PlayLoop</title>
     <link rel="stylesheet" href="./src/index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Shade&family=VT323&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@1,8..60,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
